vlc_list.hpp:131:15: error: invalid cast from type 'std::nullptr_t' to type 'const volatile info_t*'

  • OS: Gentoo
  • VLC: eda2e960
  • Compiler: gcc-13.2.1

The build using the git repo fails with a invalid cast from type 'std::nullptr_t' to type 'const volatile info_t*'.

This was introduced in commit 1398b183.

../../../doltlibtool  --tag=CXX   --mode=compile x86_64-gentoo-linux-musl-g++ -std=c++17 -DHAVE_CONFIG_H -I. -I../../..  -DMODULE_STRING=\"$(p="dialogs/mediainfo/libqt_plugin_la-info_panels.lo"; p="${p##*/}"; p="${p#lib}"; p="${p%_plugin*}"; p=$(echo "$p"|sed 's/-/_/g'); p="${p%.lo}"; echo "$p")\" -DVLC_DYNAMIC_PLUGIN  -DQT_STRICT_ITERATORS -I. -I. -I./dialogs/extended -I./dialogs/fingerprint -I./dialogs/firstrun -I./dialogs/help -I./dialogs/messages -I./dialogs/open -I./dialogs/podcast -I./dialogs/preferences -I./dialogs/sout -I./dialogs/vlm -DQPNI_HEADER=\<5.15.12/QtGui/qpa/qplatformnativeinterface.h\>    -DQT5_HAS_GTK -DQT5_GUI_PRIVATE -I/usr/include/qt5/QtCore/5.15.12 -I/usr/include/qt5/QtCore/5.15.12/QtCore -I/usr/include/qt5/QtGui/5.15.12 -I/usr/include/qt5/QtGui/5.15.12/QtGui -DQT5_DECLARATIVE_PRIVATE -I/usr/include/qt5/QtCore/5.15.12 -I/usr/include/qt5/QtCore/5.15.12/QtCore -I/usr/include/qt5/QtGui/5.15.12 -I/usr/include/qt5/QtGui/5.15.12/QtGui -I/usr/include/qt5/QtQml/5.15.12 -I/usr/include/qt5/QtQml/5.15.12/QtQml -I/usr/include/qt5/QtQuick/5.15.12 -I/usr/include/qt5/QtQuick/5.15.12/QtQuick  -I../../../include -I../../../include  -I../../../compat/stdbit  -DQT_NETWORK_LIB -I/usr/include/qt5/QtNetwork -I/usr/include/qt5 -DQT_QMLMODELS_LIB -I/usr/include/qt5/QtQmlModels -DQT_QUICKWIDGETS_LIB -I/usr/include/qt5/QtQuickWidgets -DQT_QML_LIB -I/usr/include/qt5/QtQml -DQT_QUICKCONTROLS2_LIB -I/usr/include/qt5/QtQuickControls2 -DQT_QUICK_LIB -I/usr/include/qt5/QtQuick -DQT_SVG_LIB -I/usr/include/qt5/QtSvg -DQT_CORE_LIB -I/usr/include/qt5/QtCore -DQT_GUI_LIB -I/usr/include/qt5/QtGui -DQT_WIDGETS_LIB -I/usr/include/qt5/QtWidgets -Wno-deprecated-copy   -DQT5_HAS_X11  -DQT5_HAS_X11_COMPOSITOR -DQT_X11EXTRAS_LIB -I/usr/include/qt5/QtX11Extras -I/usr/include/qt5 -DQT_GUI_LIB -I/usr/include/qt5/QtGui -DQT_CORE_LIB -I/usr/include/qt5/QtCore     -O2 -pipe -fno-strict-aliasing -pthread -Wall -Wextra -Wsign-compare -Wundef -Wpointer-arith -Wvolatile-register-var -Wformat -Wformat-security -Wduplicated-branches -Wduplicated-cond -fvisibility=hidden -c -o dialogs/mediainfo/libqt_plugin_la-info_panels.lo `test -f 'dialogs/mediainfo/info_panels.cpp' || echo './'`dialogs/mediainfo/info_panels.cpp
In file included from dialogs/mediainfo/info_panels.cpp:40:
../../../include/vlc_list.hpp: In instantiation of 'constexpr std::ptrdiff_t vlc::list_iterator_base<NodeType, ListType>::offset() const [with NodeType = info_category_t; ListType = vlc_list; std::ptrdiff_t = long int]':
../../../include/vlc_list.hpp:153:72:   required from 'vlc::list_iterator_base<NodeType, ListType>::reference vlc::list_iterator_base<NodeType, ListType>::operator*() const [with NodeType = info_category_t; ListType = vlc_list; reference = info_category_t&]'
dialogs/mediainfo/info_panels.cpp:511:74:   required from here
../../../include/vlc_list.hpp:131:15: error: invalid cast from type 'std::nullptr_t' to type 'const volatile info_category_t*'
  131 |             &(reinterpret_cast<NodeType const volatile*>(NULL)->*_node_ptr)
      |               ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
../../../include/vlc_list.hpp: In instantiation of 'constexpr std::ptrdiff_t vlc::list_iterator_base<NodeType, ListType>::offset() const [with NodeType = info_t; ListType = vlc_list; std::ptrdiff_t = long int]':
../../../include/vlc_list.hpp:153:72:   required from 'vlc::list_iterator_base<NodeType, ListType>::reference vlc::list_iterator_base<NodeType, ListType>::operator*() const [with NodeType = info_t; ListType = vlc_list; reference = info_t&]'
dialogs/mediainfo/info_panels.cpp:520:61:   required from here
../../../include/vlc_list.hpp:131:15: error: invalid cast from type 'std::nullptr_t' to type 'const volatile info_t*'
make[5]: *** [Makefile:7946: dialogs/mediainfo/libqt_plugin_la-info_panels.lo] Error 1
make[5]: Leaving directory '/var/tmp/portage/media-video/vlc-9999/work/vlc-9999/modules/gui/qt'
make[4]: *** [Makefile:4332: all] Error 2
make[4]: Leaving directory '/var/tmp/portage/media-video/vlc-9999/work/vlc-9999/modules/gui/qt'
make[3]: *** [Makefile:30607: all-recursive] Error 1
make[3]: Leaving directory '/var/tmp/portage/media-video/vlc-9999/work/vlc-9999/modules'
make[2]: *** [Makefile:13789: all] Error 2
make[2]: Leaving directory '/var/tmp/portage/media-video/vlc-9999/work/vlc-9999/modules'
make[1]: *** [Makefile:1646: all-recursive] Error 1
make[1]: Leaving directory '/var/tmp/portage/media-video/vlc-9999/work/vlc-9999'
make: *** [Makefile:1533: all] Error 2